[project]
name = "spark-operator-benchmarks"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "blinker==1.9.0",
    "brotli==1.2.0",
    "cachetools==5.5.1",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "configargparse==1.7",
    "flask==3.1.1",
    "flask-cors==6.0.0",
    "flask-login==0.6.3",
    "gevent==24.11.1",
    "geventhttpclient==2.3.3",
    "google-auth==2.38.0",
    "greenlet==3.1.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "kubernetes==29.0.0",
    "locust==2.23.1",
    "markupsafe==3.0.2",
    "msgpack==1.1.0",
    "oauthlib==3.2.2",
    "psutil==7.0.0",
    "pyasn1==0.6.2",
    "pyasn1-modules==0.4.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
    "pyzmq==26.2.1",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "roundrobin==0.0.4",
    "rsa==4.9",
    "six==1.17.0",
    "tomli==2.2.1",
    "typing-extensions==4.12.2",
    "urllib3==2.6.3",
    "websocket-client==1.8.0",
    "werkzeug==3.1.6",
    "zope-event==5.0",
    "zope-interface==7.2",
]
